# joydetect

./: CMakeLists.txt  README.md
joydetect/: AUTHORS  CMakeLists.txt  README
joydetect/debian/: changelog  control  copyright
source/: CMakeLists.txt
